Vehicle state get/set refactor using templates. Added negation of pure boolean predicates.